fixed chessboard alignment

--- a/Frontend/styles/styles.css
+++ b/Frontend/styles/styles.css
@@ -44,8 +44,8 @@ html[xmlns] .clearfix {
 	width: 800px;
     margin: 0px auto;
     position: relative;
-    left: -150px;
-    top: 120px;
+    left: -90px;
+    top: 60px;
     /* border: 1px solid red */
 	
 }
